# VINS-Fusion

./: .gitignore  CMakeLists.txt  quick_notes.txt
camera_models/: CMakeLists.txt
camera_models/src/: CMakeLists.txt
config/: parking_lot_info.yaml  reloc_rviz_config.rviz
config/euroc/: euroc_mono_imu_config.yaml
config/leopard/: cam0_pinhole.yaml  leopard_mono_imu_config.yaml
config/vid/: cam0_pinhole.yaml  vid_mono_imu_config.yaml
config/zkcam/: cam0_pinhole.yaml  zkcam_mono_imu_config.yaml  zkcam_stereo_config.yaml  zkcam_stereo_imu_config.yaml
global_fusion/: CMakeLists.txt
global_fusion/src/: globalOptNode.cpp
global_fusion/src/utility/: CameraPoseVisualization.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/msg/: FindConnectionInfo.msg  PointUV.msg
loop_fusion/src/: CMakeLists.txt  CloudPointMap.cpp  CloudPointMap.h  LPStateSubscriber.cpp  LPStateSubscriber.h  LoopFusion.cpp  LoopFusion.h  keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_common.cpp  pose_graph_node.cpp  reloc.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  LoopInfoLogging.cpp  LoopInfoLogging.h  PoseInfo.h
python_wrapper/: main.cpp
ros_simulate/ros/: assert.h  ros.h
ros_simulate/std_msgs/: Header.h
ros_simulate/utility/: visualization.cpp  visualization.h
slam_app/: CMakeLists.txt
slam_app/lcm_mapping/: CMakeLists.txt
slam_app/lcm_mapping/src/: lcm_mapping.cpp
slam_app/python_wrapper/: CMakeLists.txt
slam_app/python_wrapper/src/: main.cpp  opencv_bind11.h
slam_app/ros_mapping/: CMakeLists.txt
slam_app/ros_mapping/src/: ros_mapping.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: reloc.launch
vins_estimator/src/: CMakeLists.txt  rosbagtest.cpp  rosbagtest_lib.cpp  sim_estimator_lcm.cpp  vslam_interface.cpp  vslam_interface.h
vins_estimator/src/estimator/: VOStateSubscriber.cpp  VOStateSubscriber.h  estimator.cpp  estimator.h  parameters.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_sfm.cpp
vins_estimator/src/interface/: handler.cpp  handler.h
vins_estimator/src/utility/: visualization.cpp
